cve-infra/jenkins/controller/openshift/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ceph-jenkins
  labels:
    name: ceph-jenkins
