cve-infra/jenkins/controller/openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: ceph-jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  strategy:
    try: Recreate
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins

      securityContext:
        hostUsers: false
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: jenkins
          image: image-registry.openshift-image-registry.svc:5000/ceph-jenkins/jenkins-cve:lts
          ports:
            - name: http
              containerPort: 8080
            - name: agent
              containerPort: 50000
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsGroup: 0
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            
            - name: jcasc
              mountPath: /var/jenkins_home/casc_configs

            - name: job-dsl
              mountPath: /var/jenkins_home/job-dsl

      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home

        - name: jcasc
          configMap:
            name: jenkins-jcasc

        - name: job-dsl
          configMap:
            name: jenkins-job-dsl
