cve-infra/jenkins/controller/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: ceph-jenkins
spec:
  selector:
    app: jenkins
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: jnlp
      port: 50000
      targetPort: 50000
