cve-infra/jenkins/controller/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins
  namespace: ceph-jenkins
spec:
  to:
    kind: Service
    name: jenkins
  port:
    targetPort: 8080
  tls:
    termination: edge
